fix(todo): align to center delete svg

--- a/src/todo/style.css
+++ b/src/todo/style.css
@@ -138,6 +138,7 @@ body {
 .task__delete {
     width: 24px;
     height: 24px;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
